Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -466,19 +466,23 @@ Finally, we consider the link between an organisation’s share of all activity 
 \end{figure}
 
 \subsection{Outputs}
-The criteria for mission selection we outlined above specify that a mission should be `ambitious but feasible’ - one way to explore this issue is by considering the ability of projects in the mission field to generate applied outputs. We explore this question with an analysis of output data available from GtR.
+The criteria for mission selection we outlined in Subsection \ref{tab:criteria} specify that a mission should be `ambitious but feasible’ - one way to explore this issue is by considering the extent to which projects in the active mission field generate applied outputs. We explore this question by analysing output data available from GtR.
 
-The figure below shows the ‘revealed comparative advantage’ of a field in generating different types of outputs. We produce this indicator by calculating the mean number of outputs per project in the different fields and normalising by the mean of all fields. A score above 1 indicates that, on average, a field tends to generate more outputs in a category than
-the others we are comparing it with. We focus the analysis on projects started after 2014 to control for differences in field ages (as we showed previously, active mission field and AI projects tend to be younger and therefore have has less time to generate outputs than projects in the chronic disease field).
+Figure \ref{fig:outputs} shows the ‘revealed comparative advantage’ of a category for generating different types of outputs including clinical products (predominantly software), spin-outs, publications and databases. We calculate it by normalising the mean number of outputs per project in different fields by the mean of all fields. A score above 1 indicates that, on average, a field tends to generate more outputs in a category than the others we are comparing it with. We focus the analysis on projects started after 2012 to control for differences in the age of different fields (as we showed before, active mission field and AI projects tend to be younger and therefore have has less time to generate outputs than projects in the chronic disease domain).
 
-Our analysis suggests that the active mission field is technically feasible. Its projects tend to generate more technology (this dimensions captures software development activities in particular) and spin-outs than the average.
-Here, it is worth noting that the overall levels of output are low (for example only 10\% of projects generate software outputs), and that the
-‘products’ output category is predominantly used to identify biomedical products.
+Our analysis suggests high levels of readiness in the active mission field. On average, its projects tend to generate more outputs along all considered dimensions. While this result is in line with the idea that innovation missions  open up new and potentially productive technological trajectories, this result also raises the question policy additionality: if projects in the mission field are already generating practical and potentially commercial outputs, what is the role of government interventions in further spurring the field?
 
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=0.8\textwidth]{figures/fig_17_outputs.pdf}
+    \caption{Relative comparative advantage producing different output types}
+    \label{fig:outputs}
+\end{figure}
 
 \subsection{Trajectory of the mission field}
 \label{subsec:trajectory}
 \section{Discussion and conclusions}
+
 
 
 
