Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -474,13 +474,46 @@ Our analysis suggests high levels of readiness in the active mission field. On a
 
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.8\textwidth]{figures/fig_17_outputs.pdf}
+    \includegraphics[width=\textwidth]{figures/fig_17_outputs.pdf}
     \caption{Relative comparative advantage producing different output types}
     \label{fig:outputs}
 \end{figure}
 
 \subsection{Trajectory of the mission field}
 \label{subsec:trajectory}
+
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\textwidth]{figures/fig_18_distr.pdf}
+    \caption{Share of projects with topic presence by origin}
+    \label{fig:topic_distr}
+\end{figure}
+
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\textwidth]{figures/fig_19_proj_distr.pdf}
+    \caption{Topic composition of projects by origin (first row) and year of funding, funding size and funding body (second row)}
+    \label{fig:topic_comp}
+\end{figure}
+
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\textwidth]{figures/fig_20_topic_trends.pdf}
+    \caption{Topic composition of year by origin (first row) and evolution of year topic entropy by origin}
+    \label{fig:topic_evol}
+\end{figure}
+
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=0.8\textwidth]{figures/fig_21_heatmap.pdf}
+    \caption{Project count by chronic disease related topic and year}
+    \label{fig:topic_evol}
+\end{figure}
+
+\subsection{Trajectory of the mission field}
+\label{subsec:trajectory}
+\section{Discussion and conclusions}
+
 \section{Discussion and conclusions}
 
 
